@@ -6,6 +6,7 @@
 - ignore annoying warnings for LibreSSL users (by Anna cyberTailor)
 - ansicat: workaround what seems to be a BS4 bug where elements after a <br/> were ignored
 - blocklist: marked x.com, twitter.com and youtube.com as blocked to save bandwith until we have a viable option to use them with offpunk.
+- offpunk: be more explicit about how to unblock a blocked URL
 
 ## 2.6 - February 24th 2025
 FOR PACKAGERS: dependency to python-pil (or pillow) has been dropped
